include/BepuPhysics.h

	/// <summary>
	/// Defines properties of the solver
	/// </summary>
	struct SolveDescription
	{
		/// <summary>
		/// Number of velocity iterations to use in the solver if there is no <see cref="VelocityIterationScheduler"/> or if it returns a non-positive value for a substep.
		/// </summary>
		int32_t VelocityIterationCount;
		/// <summary>
		/// Number of substeps to execute each time the solver runs.
		/// </summary>
		int32_t SubstepCount;
		/// <summary>
		/// Number of synchronzed constraint batches to use before using a fallback approach.
		/// </summary>
		int32_t FallbackBatchThreshold;
		/// <summary>
		/// Callback executed to determine how many velocity iterations should be used for a given substep. If null, or if it returns a non-positive value, the <see cref="VelocityIterationCount"/> will be used instead.
		/// </summary>
		/// <param name="substepIndex">Index of the substep to schedule velocity iterations for.</param>
		/// <returns>Number of velocity iterations to run during this substep.</returns>
		int32_t(*VelocityIterationScheduler)(int32_t substepIndex);

		/// <summary>
		/// Creates a solve description.
		/// </summary>
		/// <param name="velocityIterationCount">Number of velocity iterations per substep.</param>
		/// <param name="substepCount">Number of substeps in the solve.</param>
		/// <param name="fallbackBatchThreshold">Number of synchronzed constraint batches to use before using a fallback approach.</param>
		SolveDescription(int velocityIterationCount, int substepCount, int fallbackBatchThreshold = 64)
		{
			VelocityIterationCount = velocityIterationCount;
			SubstepCount = substepCount;
			FallbackBatchThreshold = fallbackBatchThreshold;
			VelocityIterationScheduler = NULL;
		}
	};
	/// <summary>
	/// The common set of allocation sizes for a simulation.
	/// </summary>
	struct SimulationAllocationSizes
	{
		/// <summary>
		/// The number of bodies to allocate space for.
		/// </summary>
		int32_t Bodies;
		/// <summary>
		/// The number of statics to allocate space for.
		/// </summary>
		int32_t Statics;
		/// <summary>
		/// The number of inactive islands to allocate space for.
		/// </summary>
		int32_t Islands;
		/// <summary>
		/// Minimum number of shapes to allocate space for in each shape type batch.
		/// </summary>
		int32_t ShapesPerType;
		/// <summary>
		/// The number of constraints to allocate bookkeeping space for. This does not affect actual type batch allocation sizes, only the solver-level constraint handle storage.
		/// </summary>
		int32_t Constraints;
		/// <summary>
		/// The minimum number of constraints to allocate space for in each individual type batch.
		/// New type batches will be given enough memory for this number of constraints, and any compaction will not reduce the allocations below it.
		/// The number of constraints can vary greatly across types- there are usually far more contacts than ragdoll constraints.
		/// Per type estimates can be assigned within the Solver.TypeBatchAllocation if necessary. This value acts as a lower bound for all types.
		/// </summary>
		int32_t ConstraintsPerTypeBatch;
		/// <summary>
		/// The minimum number of constraints to allocate space for in each body's constraint list.
		/// New bodies will be given enough memory for this number of constraints, and any compaction will not reduce the allocations below it.
		/// </summary>
		int32_t ConstraintCountPerBodyEstimate;

		/// <summary>
		/// Constructs a description of simulation allocations.
		/// </summary>
		/// <param name="bodies">The number of bodies to allocate space for.</param>
		/// <param name="statics">The number of statics to allocate space for.</param>
		/// <param name="islands">The number of inactive islands to allocate space for.</param>
		/// <param name="shapesPerType">Minimum number of shapes to allocate space for in each shape type batch.</param>
		/// <param name="constraints">The number of constraints to allocate bookkeeping space for. This does not affect actual type batch allocation sizes, only the solver-level constraint handle storage.</param>
		/// <param name="constraintsPerTypeBatch">The minimum number of constraints to allocate space for in each individual type batch.
		/// New type batches will be given enough memory for this number of constraints, and any compaction will not reduce the allocations below it.
		/// The number of constraints can vary greatly across types- there are usually far more contacts than ragdoll constraints.
		/// Per type estimates can be assigned within the Solver.TypeBatchAllocation if necessary. This value acts as a lower bound for all types.</param>
		/// <param name="constraintCountPerBodyEstimate">The minimum number of constraints to allocate space for in each body's constraint list.
		/// New bodies will be given enough memory for this number of constraints, and any compaction will not reduce the allocations below it.</param>
		SimulationAllocationSizes(int32_t bodies = 4096, int32_t statics = 4096, int32_t islands = 16, int32_t shapesPerType = 128, int32_t constraints = 16384, int32_t constraintsPerTypeBatch = 256, int32_t constraintCountPerBodyEstimate = 8)
		{
			Bodies = bodies;
			Statics = statics;
			Islands = islands;
			ShapesPerType = shapesPerType;
			Constraints = constraints;
			ConstraintsPerTypeBatch = constraintsPerTypeBatch;
			ConstraintCountPerBodyEstimate = constraintCountPerBodyEstimate;
		}
	};
	/// <summary>
	/// Initializes the interop structures.
	/// </summary>
	extern "C" void Initialize();
	/// <summary>
	/// Destroys all resources created through the interop API and releases interop structures.
	/// </summary>
	extern "C" void Destroy();
	/// <summary>
	/// Gets the number of threads exposed by the operating system on this platform. Cores with SMT can show as having multiple threads.
	/// </summary>
	/// <returns>Number of threads exposed by the operating system on this platform.</returns>
	extern "C" int32_t GetPlatformThreadCount();
	/// <summary>
	/// Creates a new buffer pool.
	/// </summary>
	/// <param name="minimumBlockAllocationSize">Minimum size of individual block allocations. Must be a power of 2.
	/// Pools with single allocations larger than the minimum will use the minimum value necessary to hold one element.
	/// Buffers will be suballocated from blocks.</param>
	/// <param name="expectedUsedSlotCountPerPool">Number of suballocations to preallocate reference space for.
	/// This does not preallocate actual blocks, just the space to hold references that are waiting in the pool.</param>
	extern "C" BufferPoolHandle CreateBufferPool(int32_t minimumBlockAllocationSize = 131072, int32_t expectedUsedSlotCountPerPool = 16);
	/// <summary>
	/// Creates a new thread dispatcher.
	/// </summary>
	/// <param name="threadCount">Number of threads to use within the thread dispatcher.</param>
	/// <param name="threadPoolAllocationBlockSize">Minimum size in bytes of blocks allocated in per-thread buffer pools. Allocations requiring more space can result in larger block sizes, but no pools will allocate smaller blocks.</param>
	extern "C" ThreadDispatcherHandle CreateThreadDispatcher(int32_t threadCount, int32_t threadPoolAllocationBlockSize = 16384);
	/// <summary>
	/// Creates a new simulation.
	/// </summary>
	/// <param name="bufferPool">Buffer pool for the simulation's main allocations.</param>
	/// <param name="narrowPhaseCallbacks">Narrow phase callbacks to be invoked by the simulation.</param>
	/// <param name="poseIntegratorCallbacks">Pose integration state and callbacks to be invoked by the simulation.</param>
	/// <param name="solveDescriptionInterop">Defines velocity iteration count and substep counts for the simulation's solver.</param>
	/// <param name="initialAllocationSizes">Initial capacities to allocate within the simulation.</param>
	/// <returns></returns>
	extern "C" SimulationHandle CreateSimulation(BufferPoolHandle bufferPool, NarrowPhaseCallbacks narrowPhaseCallbacks, PoseIntegratorCallbacks poseIntegratorCallbacks, SolveDescription solveDescriptionInterop, SimulationAllocationSizes initialAllocationSizes);
	extern "C" BodyHandle AddBody(SimulationHandle simulationHandle, BodyDescription bodyDescription);
	/// <summary>
	/// Gets a pointer to the dynamic state associated with a body. Includes pose, velocity, and inertia.
	/// </summary>
	/// <param name="simulationHandle">Simulation to pull a body's state from.</param>
	/// <param name="bodyHandle">Body handle to pull data about.</param>
	/// <returns>Pointer to the body's dynamic state.</returns>
	/// <remarks>This is a direct pointer. The memory location associated with a body can move other bodies are removed from the simulation; do not hold a pointer beyond the point where it may be invalidated.</remarks>
	extern "C" BodyDynamics * GetBodyDynamics(SimulationHandle simulationHandle, BodyHandle bodyHandle);
	extern "C" StaticHandle AddStatic(SimulationHandle simulationHandle, StaticDescription staticDescription);
	/// <summary>
	/// Steps the simulation forward a single time.
	/// </summary>
	/// <param name="simulationHandle">Handle of the simulation to step.</param>
	/// <param name="dt">Duration of the timestep.</param>
	/// <param name="threadDispatcherHandle">Handle of the thread dispatcher to use, if any. Can be a null reference.</param>
	extern "C" void Timestep(SimulationHandle simulationHandle, float dt, ThreadDispatcherHandle threadDispatcherHandle);
	/// <summary>
	/// Adds a box shape to the simulation.
	/// </summary>
	/// <param name="simulationHandle">Handle of the simulation to add the shape to.</param>
	/// <param name="box">Shape to add to the simulation.</param>
	extern "C" TypedIndex AddBox(SimulationHandle simulationHandle, Box box);